2008-11-06  Michael Hutchinson  <mhutchinson@novell.com>

	* Makefile.am: Fix build dependencies.

2008-11-06  Mike Krüger  <mike@icsharpcode.net>

	* Mono.TextEditor.Highlighting/SyntaxMode.cs: Fixed 'Bug 442110 - Syntax
	highlighting parser problem with escaped backslash'.

2008-11-05  Michael Hutchinson  <mhutchinson@novell.com>

	* Mono.TextEditor.Vi/ViMode.cs: Made the "I" command open insert mode
	before the first non-whitespace character on the line, not the line
	start. Fixes "Bug 438177 - [vi] 'I' behavior inconsistent with vi".

2008-11-05  Mike Krüger  <mike@icsharpcode.net>

	* Mono.TextEditor/Margin.cs:
	* Mono.TextEditor/IBuffer.cs:
	* Mono.TextEditor/Segment.cs:
	* Mono.TextEditor/Document.cs:
	* Mono.TextEditor/EditMode.cs:
	* Mono.TextEditor/GapBuffer.cs:
	* Mono.TextEditor.Vi/ViMode.cs:
	* Mono.TextEditor/TextEditor.cs:
	* Mono.TextEditor/IconMargin.cs:
	* Mono.TextEditor/FoldSegment.cs:
	* Mono.TextEditor/SearchResult.cs:
	* Mono.TextEditor/RedBlackTree.cs:
	* Mono.TextEditor/LineSplitter.cs:
	* Mono.TextEditor/GutterMargin.cs:
	* Mono.TextEditor/HelperMethods.cs:
	* Mono.TextEditor/TextViewMargin.cs:
	* Mono.TextEditor/TextEditorData.cs:
	* Mono.TextEditor/BookmarkActions.cs:
	* Mono.TextEditor/LineSegmentTree.cs:
	* Mono.TextEditor/ClipboardActions.cs:
	* Mono.TextEditor/CaretMoveActions.cs:
	* Mono.TextEditor/FoldMarkerMargin.cs:
	* Mono.TextEditor/ReplaceEventArgs.cs:
	* Mono.TextEditor/DocumentLocation.cs:
	* Mono.TextEditor/CodeSegmentPreviewWindow.cs: Done some minor cosmetic
	changes. Fixed all warning messages.

2008-11-05  Mike Krüger  <mike@icsharpcode.net>

	* Mono.TextEditor/TextEditor.cs: fixed 'Bug 437049 - Horizontal keyboard
	scrolling sometimes does not work'.

2008-11-04  Mike Krüger  <mike@icsharpcode.net>

	* Mono.TextEditor.Highlighting/SyntaxMode.cs: added bounds checking for
	'Bug 429905 - Tooltip folded region preview can crash MD'.

2008-10-31  Full Name  <Email Address>
